# ImageRetrieval

./: CMakeLists.txt
include/: ColorHistogram.hpp  FeatureExtractor.hpp  ImageDatabase.hpp  KCluster.hpp  SIFT.hpp  Search.hpp
src/: ColorHistogram.cpp  ImageDatabase.cpp  KCluster.cpp  Search.cpp  main.cpp
